# sproink

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  cbindgen.toml  codecov.yml  release-please-config.json  sproink.h
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release-please.yml  release.yml
benches/: propagation.rs
docs/team-up/plans/: implementation-plan.md  plan-review.md  rust-expert-plan-review.md
docs/team-up/research/: rust-patterns.md
docs/team-up/specs/: rust-expert-review.md  sproink-spec-review.md  sproink-spec.md
docs/team-up/status/: final-status.md  qa-review.md
src/: affinity.rs  engine.rs  error.rs  ffi.rs  graph.rs  hebbian.rs  inhibition.rs  lib.rs  squash.rs  types.rs
tests/: ffi_tests.rs  integration.rs  property_tests.rs
tests/common/: mod.rs
