[package]
name = "sproink"
version = "0.1.0"
edition = "2024"
description = "In-memory spreading activation engine with CSR graph"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rayon = "1.10"
thiserror = "2"
typed-builder = "0.20"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
mockall = "0.13"
proptest = "1.9"

[build-dependencies]
cbindgen = "0.27"

[[bench]]
name = "propagation"
harness = false
