[package]
name = "sproink"
version = "0.1.0"
edition = "2024"
description = "In-memory spreading activation engine with CSR graph"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
serde = ["dep:serde"]

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
typed-builder = "0.23"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.9"
serde_json = "1"

[build-dependencies]
cbindgen = "0.29"

[[bench]]
name = "propagation"
harness = false
